# powernugget

./: .gitignore  manual_run.py  pyproject.toml  readme.md  tox.ini
powernugget/: __init__.py  errors.py  logger.py  nuggetizer.py  tasks_generator.py
powernugget/builtins/: __init__.py  debug.py  replace_image.py
powernugget/builtins/nugget/: __init__.py  models.py  nugget.py
powernugget/dashboard/: __init__.py  models.py  pbit.py
powernugget/descriptions/: __init__.py  models.py  pyproject.py  yaml.py
powernugget/deserializer/: __init__.py  models.py  pyproject.py  yaml.py
tests/: test_deserializer.py  test_nugget.py  test_nuggetizer.py  test_smoketest.py  test_tasks_generator.py
tests/test_repo/: dashboard_template.pbit  inventory.yaml  pyproject.toml  tasks.yaml
tests/test_repo_integration/: dashboard_template.pbit  inventory.yaml  tasks.yaml  vars.yaml
